back/src/main/java/com/example/capstone/global/error/exception/EntityNotFoundException.java
package com.example.capstone.global.error.exception;

public class EntityNotFoundException extends BusinessException {

    public EntityNotFoundException() {
        super(ErrorCode.ENTITY_NOT_FOUND);
    }
}
